--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,4 @@
-/**
-* Template Name: Company - v4.3.0
-* Template URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #4d4643;
@@ -2189,4 +2180,15 @@ section {
   background: #1bbd36;
   color: #fff;
   text-decoration: none;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
